--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,6 +36,11 @@
 				</div>
 				<div class="form-group">
 					<div class="">
+						<input type="text" th:field="*{address}" placeholder="Address" class="form-control" />
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="">
 						<button type="submit" class="btn btn-primary btn-block">Register User</button>
 					</div>
 				</div>
