--- a/src/main/resources/templates/stock/show.html
+++ b/src/main/resources/templates/stock/show.html
@@ -2,64 +2,32 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
 <meta charset="UTF-8" />
-<title th:text=${title}></title>
-
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<title th:text=${title}></title>
 
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
-.w3-bar-block .w3-bar-item {padding:20px}
 
-.btn {
-    display: inline-block;
-    text-decoration: none;
-    color: #FFF;
-    width: 120px;
-    height: 120px;
-    line-height: 120px;
-    border-radius: 50%;
-    text-align: center;
-    vertical-align: middle;
-    overflow: hidden;
-    background-image: -webkit-linear-gradient(45deg, #709dff 0%, #91fdb7 100%);    
-    background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
-    transition: .4s;
-    padding: 0;
-}
-
-.btn:hover{
-  -webkit-transform: rotate(10deg);
-  -ms-transform: rotate(10deg);
-  transform: rotate(10deg);
-}
-
-</style>
 
 </head>
 <body>
-	<h1>Hello Admin</h1>
-	<a href="/addstockform" class="btn">Add a product</a>
-	
-
-	<p th:unless="${products} and ${products.size()}">No Products :(</p>
 	<table class="table">
-		
-		<tr>
-			<th>Name</th>
-			<th>Description</th>
-			<th>Category</th>
-            <th>Price</th>
-			<th>Image</th>
-			<th>Stock Amount</th>
-		</tr>
+    
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Category</th>
+      <th>Price</th>
+      <th>Image</th>
+      <th>Stock</th>
+    </tr>
         
         <tr th:if="${products.empty}">
-            <td colspan="2"> No Products Available Yet :( </td>
+            <td colspan="2"> No products with that title, please try again :( </td>
+           
         </tr>
         <tr th:each="product : ${products}">
             <td><span th:text="${product.title}"> Title </span></td>
@@ -71,6 +39,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         </tr>
     
     </table>
+    <a href="/user" class="btn">back</a>
+    
 
 </body>
 </html>
